--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -36,6 +36,6 @@ let permalink = 'https://example.com/';
     const TYPESENSE_PROTOCOL = '${process.env.TYPESENSE_PROTOCOL}';
     const TYPESENSE_SEARCH_KEY = '${process.env.TYPESENSE_SEARCH_KEY}';
     </script>`}
-    <script type="text/javascript" src="assets/search.js"></script>
+    <script type="text/javascript" src="/search.js"></script>
   </body>
 </html>
